--- a/SpVoice/App.config
+++ b/SpVoice/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="essence" connectionString="Password=essence;User ID=essence;Data Source=198.17_ORCL;Max Pool Size=200;Min Pool Size=2" providerName="System.Data.OracleClient"/>
+    <add name="TOMDB" connectionString="Password=TOMDB;User ID=TOMDB;Data Source=TOMDB_ORCL;Max Pool Size=200;Min Pool Size=2" providerName="System.Data.OracleClient"/>
  
   </connectionStrings>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
